web1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
  namespace: dev 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: nihad906/jap-week2-nihad-web1:latest
        volumeMounts:
        - mountPath: "/mnt/azure"
          name: azurefile
        ports:
        - containerPort: 80
      volumes:
      - name: azurefile
        persistentVolumeClaim:
          claimName: azurefile-pv
      
---
apiVersion: v1
kind: Service
metadata:
  name: web1  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web1
