web2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  namespace: dev   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: nihad906/jap-week2-nihad-web2:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web2  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web2
